--- a/AsynMultiTaskModel.ipynb
+++ b/AsynMultiTaskModel.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "device(type='cuda', index=0)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -118,11 +118,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class SharedModel(nn.Module):\n",
+    "class AsynSharedModel(nn.Module):\n",
     "    def __init__(self, vocab_size, intents_count, tags_count, emb_dim=64, lstm_hidden_dim=128, num_layers=1,  dropout_p=0.25, pad_idx = 0):\n",
     "        super().__init__()\n",
     "\n",
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,73 +262,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[1 / 30] Train: Loss = 2.66810, Accuracy = 70.12%: 100%|██████████| 140/140 [00:02<00:00, 69.65it/s]\n",
-      "[1 / 30]   Val: Loss = 1.44941, Accuracy = 83.52%: 100%|██████████| 4/4 [00:00<00:00, 61.54it/s]\n",
-      "[2 / 30] Train: Loss = 0.99398, Accuracy = 88.34%: 100%|██████████| 140/140 [00:01<00:00, 77.65it/s]\n",
-      "[2 / 30]   Val: Loss = 0.82354, Accuracy = 91.05%: 100%|██████████| 4/4 [00:00<00:00, 75.47it/s]\n",
-      "[3 / 30] Train: Loss = 0.62603, Accuracy = 92.79%: 100%|██████████| 140/140 [00:02<00:00, 65.03it/s]\n",
-      "[3 / 30]   Val: Loss = 0.54641, Accuracy = 93.97%: 100%|██████████| 4/4 [00:00<00:00, 37.74it/s]\n",
-      "[4 / 30] Train: Loss = 0.45622, Accuracy = 94.72%: 100%|██████████| 140/140 [00:02<00:00, 50.16it/s]\n",
-      "[4 / 30]   Val: Loss = 0.45780, Accuracy = 95.23%: 100%|██████████| 4/4 [00:00<00:00, 36.04it/s]\n",
-      "[5 / 30] Train: Loss = 0.33751, Accuracy = 96.07%: 100%|██████████| 140/140 [00:02<00:00, 50.78it/s]\n",
-      "[5 / 30]   Val: Loss = 0.35902, Accuracy = 96.15%: 100%|██████████| 4/4 [00:00<00:00, 40.40it/s]\n",
-      "[6 / 30] Train: Loss = 0.27457, Accuracy = 96.82%: 100%|██████████| 140/140 [00:02<00:00, 50.36it/s]\n",
-      "[6 / 30]   Val: Loss = 0.30190, Accuracy = 96.95%: 100%|██████████| 4/4 [00:00<00:00, 38.83it/s]\n",
-      "[7 / 30] Train: Loss = 0.21914, Accuracy = 97.43%: 100%|██████████| 140/140 [00:02<00:00, 51.00it/s]\n",
-      "[7 / 30]   Val: Loss = 0.26012, Accuracy = 97.26%: 100%|██████████| 4/4 [00:00<00:00, 38.83it/s]\n",
-      "[8 / 30] Train: Loss = 0.18048, Accuracy = 97.80%: 100%|██████████| 140/140 [00:02<00:00, 51.70it/s]\n",
-      "[8 / 30]   Val: Loss = 0.24072, Accuracy = 97.66%: 100%|██████████| 4/4 [00:00<00:00, 38.46it/s]\n",
-      "[9 / 30] Train: Loss = 0.15273, Accuracy = 98.21%: 100%|██████████| 140/140 [00:02<00:00, 51.66it/s]\n",
-      "[9 / 30]   Val: Loss = 0.23398, Accuracy = 97.79%: 100%|██████████| 4/4 [00:00<00:00, 40.82it/s]\n",
-      "[10 / 30] Train: Loss = 0.12396, Accuracy = 98.43%: 100%|██████████| 140/140 [00:02<00:00, 51.30it/s]\n",
-      "[10 / 30]   Val: Loss = 0.23850, Accuracy = 97.97%: 100%|██████████| 4/4 [00:00<00:00, 40.82it/s]\n",
-      "[11 / 30] Train: Loss = 0.10115, Accuracy = 98.62%: 100%|██████████| 140/140 [00:02<00:00, 51.66it/s]\n",
-      "[11 / 30]   Val: Loss = 0.23006, Accuracy = 98.03%: 100%|██████████| 4/4 [00:00<00:00, 37.74it/s]\n",
-      "[12 / 30] Train: Loss = 0.09161, Accuracy = 98.78%: 100%|██████████| 140/140 [00:02<00:00, 51.49it/s]\n",
-      "[12 / 30]   Val: Loss = 0.20631, Accuracy = 98.10%: 100%|██████████| 4/4 [00:00<00:00, 38.83it/s]\n",
-      "[13 / 30] Train: Loss = 0.07354, Accuracy = 98.95%: 100%|██████████| 140/140 [00:02<00:00, 51.28it/s]\n",
-      "[13 / 30]   Val: Loss = 0.19534, Accuracy = 98.16%: 100%|██████████| 4/4 [00:00<00:00, 38.46it/s]\n",
-      "[14 / 30] Train: Loss = 0.07424, Accuracy = 99.05%: 100%|██████████| 140/140 [00:02<00:00, 50.96it/s]\n",
-      "[14 / 30]   Val: Loss = 0.21167, Accuracy = 98.21%: 100%|██████████| 4/4 [00:00<00:00, 40.40it/s]\n",
-      "[15 / 30] Train: Loss = 0.06242, Accuracy = 99.13%: 100%|██████████| 140/140 [00:02<00:00, 50.17it/s]\n",
-      "[15 / 30]   Val: Loss = 0.19613, Accuracy = 98.26%: 100%|██████████| 4/4 [00:00<00:00, 40.00it/s]\n",
-      "[16 / 30] Train: Loss = 0.04891, Accuracy = 99.26%: 100%|██████████| 140/140 [00:02<00:00, 50.36it/s]\n",
-      "[16 / 30]   Val: Loss = 0.18391, Accuracy = 98.50%: 100%|██████████| 4/4 [00:00<00:00, 36.70it/s]\n",
-      "[17 / 30] Train: Loss = 0.04636, Accuracy = 99.33%: 100%|██████████| 140/140 [00:02<00:00, 50.71it/s]\n",
-      "[17 / 30]   Val: Loss = 0.19624, Accuracy = 98.47%: 100%|██████████| 4/4 [00:00<00:00, 38.47it/s]\n",
-      "[18 / 30] Train: Loss = 0.03976, Accuracy = 99.33%: 100%|██████████| 140/140 [00:02<00:00, 50.68it/s]\n",
-      "[18 / 30]   Val: Loss = 0.20595, Accuracy = 98.48%: 100%|██████████| 4/4 [00:00<00:00, 39.22it/s]\n",
-      "[19 / 30] Train: Loss = 0.04075, Accuracy = 99.47%: 100%|██████████| 140/140 [00:02<00:00, 50.83it/s]\n",
-      "[19 / 30]   Val: Loss = 0.20040, Accuracy = 98.50%: 100%|██████████| 4/4 [00:00<00:00, 37.04it/s]\n",
-      "[20 / 30] Train: Loss = 0.03471, Accuracy = 99.48%: 100%|██████████| 140/140 [00:02<00:00, 51.00it/s]\n",
-      "[20 / 30]   Val: Loss = 0.18700, Accuracy = 98.60%: 100%|██████████| 4/4 [00:00<00:00, 39.60it/s]\n",
-      "[21 / 30] Train: Loss = 0.03711, Accuracy = 99.56%: 100%|██████████| 140/140 [00:02<00:00, 50.52it/s]\n",
-      "[21 / 30]   Val: Loss = 0.23224, Accuracy = 98.50%: 100%|██████████| 4/4 [00:00<00:00, 40.00it/s]\n",
-      "[22 / 30] Train: Loss = 0.02804, Accuracy = 99.54%: 100%|██████████| 140/140 [00:02<00:00, 51.26it/s]\n",
-      "[22 / 30]   Val: Loss = 0.19084, Accuracy = 98.55%: 100%|██████████| 4/4 [00:00<00:00, 42.09it/s]\n",
-      "[23 / 30] Train: Loss = 0.02749, Accuracy = 99.58%: 100%|██████████| 140/140 [00:02<00:00, 51.21it/s]\n",
-      "[23 / 30]   Val: Loss = 0.20467, Accuracy = 98.48%: 100%|██████████| 4/4 [00:00<00:00, 41.68it/s]\n",
-      "[24 / 30] Train: Loss = 0.02517, Accuracy = 99.63%: 100%|██████████| 140/140 [00:02<00:00, 51.17it/s]\n",
-      "[24 / 30]   Val: Loss = 0.19681, Accuracy = 98.50%: 100%|██████████| 4/4 [00:00<00:00, 40.01it/s]\n",
-      "[25 / 30] Train: Loss = 0.02337, Accuracy = 99.62%: 100%|██████████| 140/140 [00:02<00:00, 50.95it/s]\n",
-      "[25 / 30]   Val: Loss = 0.21977, Accuracy = 98.60%: 100%|██████████| 4/4 [00:00<00:00, 40.40it/s]\n",
-      "[26 / 30] Train: Loss = 0.02120, Accuracy = 99.69%: 100%|██████████| 140/140 [00:02<00:00, 51.09it/s]\n",
-      "[26 / 30]   Val: Loss = 0.21327, Accuracy = 98.56%: 100%|██████████| 4/4 [00:00<00:00, 37.38it/s]\n",
-      "[27 / 30] Train: Loss = 0.01730, Accuracy = 99.73%: 100%|██████████| 140/140 [00:02<00:00, 50.65it/s]\n",
-      "[27 / 30]   Val: Loss = 0.22079, Accuracy = 98.40%: 100%|██████████| 4/4 [00:00<00:00, 39.61it/s]\n",
-      "[28 / 30] Train: Loss = 0.02191, Accuracy = 99.73%: 100%|██████████| 140/140 [00:02<00:00, 50.91it/s]\n",
-      "[28 / 30]   Val: Loss = 0.21193, Accuracy = 98.60%: 100%|██████████| 4/4 [00:00<00:00, 40.82it/s]\n",
-      "[29 / 30] Train: Loss = 0.01779, Accuracy = 99.75%: 100%|██████████| 140/140 [00:02<00:00, 51.06it/s]\n",
-      "[29 / 30]   Val: Loss = 0.20864, Accuracy = 98.68%: 100%|██████████| 4/4 [00:00<00:00, 41.68it/s]\n",
-      "[30 / 30] Train: Loss = 0.01682, Accuracy = 99.76%: 100%|██████████| 140/140 [00:02<00:00, 50.11it/s]\n",
-      "[30 / 30]   Val: Loss = 0.20818, Accuracy = 98.71%: 100%|██████████| 4/4 [00:00<00:00, 41.65it/s]\n"
+      "[1 / 30] Train: Loss = 2.66810, Accuracy = 70.12%: 100%|██████████| 140/140 [00:03<00:00, 44.38it/s]\n",
+      "[1 / 30]   Val: Loss = 1.44941, Accuracy = 83.52%: 100%|██████████| 4/4 [00:00<00:00, 34.18it/s]\n",
+      "[2 / 30] Train: Loss = 0.99398, Accuracy = 88.34%: 100%|██████████| 140/140 [00:03<00:00, 44.57it/s]\n",
+      "[2 / 30]   Val: Loss = 0.82354, Accuracy = 91.05%: 100%|██████████| 4/4 [00:00<00:00, 33.33it/s]\n",
+      "[3 / 30] Train: Loss = 0.62603, Accuracy = 92.79%: 100%|██████████| 140/140 [00:03<00:00, 45.66it/s]\n",
+      "[3 / 30]   Val: Loss = 0.54641, Accuracy = 93.97%: 100%|██████████| 4/4 [00:00<00:00, 34.78it/s]\n",
+      "[4 / 30] Train: Loss = 0.45622, Accuracy = 94.72%: 100%|██████████| 140/140 [00:03<00:00, 45.99it/s]\n",
+      "[4 / 30]   Val: Loss = 0.45780, Accuracy = 95.23%: 100%|██████████| 4/4 [00:00<00:00, 35.41it/s]\n",
+      "[5 / 30] Train: Loss = 0.33751, Accuracy = 96.07%: 100%|██████████| 140/140 [00:03<00:00, 45.02it/s]\n",
+      "[5 / 30]   Val: Loss = 0.35902, Accuracy = 96.15%: 100%|██████████| 4/4 [00:00<00:00, 35.40it/s]\n",
+      "[6 / 30] Train: Loss = 0.27457, Accuracy = 96.82%: 100%|██████████| 140/140 [00:03<00:00, 46.28it/s]\n",
+      "[6 / 30]   Val: Loss = 0.30190, Accuracy = 96.95%: 100%|██████████| 4/4 [00:00<00:00, 34.48it/s]\n",
+      "[7 / 30] Train: Loss = 0.21914, Accuracy = 97.43%: 100%|██████████| 140/140 [00:03<00:00, 46.37it/s]\n",
+      "[7 / 30]   Val: Loss = 0.26012, Accuracy = 97.26%: 100%|██████████| 4/4 [00:00<00:00, 35.71it/s]\n",
+      "[8 / 30] Train: Loss = 0.18048, Accuracy = 97.80%: 100%|██████████| 140/140 [00:03<00:00, 46.39it/s]\n",
+      "[8 / 30]   Val: Loss = 0.24072, Accuracy = 97.66%: 100%|██████████| 4/4 [00:00<00:00, 34.78it/s]\n",
+      "[9 / 30] Train: Loss = 0.15273, Accuracy = 98.21%: 100%|██████████| 140/140 [00:02<00:00, 51.30it/s]\n",
+      "[9 / 30]   Val: Loss = 0.23398, Accuracy = 97.79%: 100%|██████████| 4/4 [00:00<00:00, 65.59it/s]\n",
+      "[10 / 30] Train: Loss = 0.12396, Accuracy = 98.43%: 100%|██████████| 140/140 [00:01<00:00, 70.89it/s]\n",
+      "[10 / 30]   Val: Loss = 0.23850, Accuracy = 97.97%: 100%|██████████| 4/4 [00:00<00:00, 37.05it/s]\n",
+      "[11 / 30] Train: Loss = 0.10115, Accuracy = 98.62%: 100%|██████████| 140/140 [00:03<00:00, 45.75it/s]\n",
+      "[11 / 30]   Val: Loss = 0.23006, Accuracy = 98.03%: 100%|██████████| 4/4 [00:00<00:00, 37.73it/s]\n",
+      "[12 / 30] Train: Loss = 0.09161, Accuracy = 98.78%: 100%|██████████| 140/140 [00:02<00:00, 48.72it/s]\n",
+      "[12 / 30]   Val: Loss = 0.20631, Accuracy = 98.10%: 100%|██████████| 4/4 [00:00<00:00, 37.38it/s]\n",
+      "[13 / 30] Train: Loss = 0.07354, Accuracy = 98.95%: 100%|██████████| 140/140 [00:02<00:00, 48.58it/s]\n",
+      "[13 / 30]   Val: Loss = 0.19534, Accuracy = 98.16%: 100%|██████████| 4/4 [00:00<00:00, 36.04it/s]\n",
+      "[14 / 30] Train: Loss = 0.07424, Accuracy = 99.05%: 100%|██████████| 140/140 [00:02<00:00, 47.59it/s]\n",
+      "[14 / 30]   Val: Loss = 0.21167, Accuracy = 98.21%: 100%|██████████| 4/4 [00:00<00:00, 40.00it/s]\n",
+      "[15 / 30] Train: Loss = 0.06242, Accuracy = 99.13%: 100%|██████████| 140/140 [00:03<00:00, 45.77it/s]\n",
+      "[15 / 30]   Val: Loss = 0.19613, Accuracy = 98.26%: 100%|██████████| 4/4 [00:00<00:00, 35.40it/s]\n",
+      "[16 / 30] Train: Loss = 0.04891, Accuracy = 99.26%: 100%|██████████| 140/140 [00:03<00:00, 45.31it/s]\n",
+      "[16 / 30]   Val: Loss = 0.18391, Accuracy = 98.50%: 100%|██████████| 4/4 [00:00<00:00, 35.09it/s]\n",
+      "[17 / 30] Train: Loss = 0.04636, Accuracy = 99.33%: 100%|██████████| 140/140 [00:03<00:00, 46.13it/s]\n",
+      "[17 / 30]   Val: Loss = 0.19624, Accuracy = 98.47%: 100%|██████████| 4/4 [00:00<00:00, 38.10it/s]\n",
+      "[18 / 30] Train: Loss = 0.03976, Accuracy = 99.33%: 100%|██████████| 140/140 [00:02<00:00, 47.55it/s]\n",
+      "[18 / 30]   Val: Loss = 0.20595, Accuracy = 98.48%: 100%|██████████| 4/4 [00:00<00:00, 35.71it/s]\n",
+      "[19 / 30] Train: Loss = 0.04075, Accuracy = 99.47%: 100%|██████████| 140/140 [00:03<00:00, 46.42it/s]\n",
+      "[19 / 30]   Val: Loss = 0.20040, Accuracy = 98.50%: 100%|██████████| 4/4 [00:00<00:00, 26.85it/s]\n",
+      "[20 / 30] Train: Loss = 0.03471, Accuracy = 99.48%: 100%|██████████| 140/140 [00:03<00:00, 43.57it/s]\n",
+      "[20 / 30]   Val: Loss = 0.18700, Accuracy = 98.60%: 100%|██████████| 4/4 [00:00<00:00, 35.71it/s]\n",
+      "[21 / 30] Train: Loss = 0.03711, Accuracy = 99.56%: 100%|██████████| 140/140 [00:03<00:00, 44.40it/s]\n",
+      "[21 / 30]   Val: Loss = 0.23224, Accuracy = 98.50%: 100%|██████████| 4/4 [00:00<00:00, 34.78it/s]\n",
+      "[22 / 30] Train: Loss = 0.02804, Accuracy = 99.54%: 100%|██████████| 140/140 [00:03<00:00, 44.56it/s]\n",
+      "[22 / 30]   Val: Loss = 0.19084, Accuracy = 98.55%: 100%|██████████| 4/4 [00:00<00:00, 37.04it/s]\n",
+      "[23 / 30] Train: Loss = 0.02749, Accuracy = 99.58%: 100%|██████████| 140/140 [00:03<00:00, 45.07it/s]\n",
+      "[23 / 30]   Val: Loss = 0.20467, Accuracy = 98.48%: 100%|██████████| 4/4 [00:00<00:00, 35.40it/s]\n",
+      "[24 / 30] Train: Loss = 0.02517, Accuracy = 99.63%: 100%|██████████| 140/140 [00:03<00:00, 43.70it/s]\n",
+      "[24 / 30]   Val: Loss = 0.19681, Accuracy = 98.50%: 100%|██████████| 4/4 [00:00<00:00, 32.26it/s]\n",
+      "[25 / 30] Train: Loss = 0.02337, Accuracy = 99.62%: 100%|██████████| 140/140 [00:03<00:00, 44.37it/s]\n",
+      "[25 / 30]   Val: Loss = 0.21977, Accuracy = 98.60%: 100%|██████████| 4/4 [00:00<00:00, 37.73it/s]\n",
+      "[26 / 30] Train: Loss = 0.02120, Accuracy = 99.69%: 100%|██████████| 140/140 [00:03<00:00, 40.02it/s]\n",
+      "[26 / 30]   Val: Loss = 0.21327, Accuracy = 98.56%: 100%|██████████| 4/4 [00:00<00:00, 32.52it/s]\n",
+      "[27 / 30] Train: Loss = 0.01730, Accuracy = 99.73%: 100%|██████████| 140/140 [00:03<00:00, 42.05it/s]\n",
+      "[27 / 30]   Val: Loss = 0.22079, Accuracy = 98.40%: 100%|██████████| 4/4 [00:00<00:00, 35.09it/s]\n",
+      "[28 / 30] Train: Loss = 0.02191, Accuracy = 99.73%: 100%|██████████| 140/140 [00:03<00:00, 42.19it/s]\n",
+      "[28 / 30]   Val: Loss = 0.21193, Accuracy = 98.60%: 100%|██████████| 4/4 [00:00<00:00, 33.90it/s]\n",
+      "[29 / 30] Train: Loss = 0.01779, Accuracy = 99.75%: 100%|██████████| 140/140 [00:03<00:00, 41.74it/s]\n",
+      "[29 / 30]   Val: Loss = 0.20864, Accuracy = 98.68%: 100%|██████████| 4/4 [00:00<00:00, 33.90it/s]\n",
+      "[30 / 30] Train: Loss = 0.01682, Accuracy = 99.76%: 100%|██████████| 140/140 [00:03<00:00, 42.51it/s]\n",
+      "[30 / 30]   Val: Loss = 0.20818, Accuracy = 98.71%: 100%|██████████| 4/4 [00:00<00:00, 39.22it/s]\n"
      ]
     }
    ],
@@ -336,7 +336,7 @@
     "tokens_pad_idx = tokens_field.vocab.stoi[tokens_field.pad_token]\n",
     "tags_pad_idx = tags_field.vocab.stoi[tags_field.pad_token]\n",
     "\n",
-    "model = SharedModel(vocab_size=len(tokens_field.vocab), intents_count=len(intent_field.vocab), tags_count=len(tags_field.vocab), pad_idx = tokens_pad_idx).to(DEVICE)\n",
+    "model = AsynSharedModel(vocab_size=len(tokens_field.vocab), intents_count=len(intent_field.vocab), tags_count=len(tags_field.vocab), pad_idx = tokens_pad_idx).to(DEVICE)\n",
     "\n",
     "tags_parameters = [param for name, param in model.named_parameters() if not name.startswith('_intent')]\n",
     "intent_parameters = [param for name, param in model.named_parameters() if not name.startswith('_tags')]\n",
@@ -357,14 +357,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Test: Loss = 0.36012, Accuracy = 97.69%: 100%|██████████| 7/7 [00:00<00:00, 45.46it/s]\n"
+      "Test: Loss = 0.36012, Accuracy = 97.69%: 100%|██████████| 7/7 [00:00<00:00, 41.92it/s]\n"
      ]
     }
    ],
@@ -376,14 +376,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precision = 94.83%, Recall = 93.95%, F1 = 94.39%\n",
+      "Precision = 94.88%, Recall = 93.95%, F1 = 94.42%\n",
       "Intent accuracy = 96.53%%\n"
      ]
     }
@@ -431,6 +431,57 @@
     "    print('Intent accuracy = {:.2%}%'.format(correct_count / total_count))\n",
     "\n",
     "eval_tagger(model, test_iter)   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tegs: O O O O O O O O O O B-fromloc.city_name O B-toloc.city_name I-toloc.city_name I-toloc.city_name O B-depart_date.day_name O B-depart_time.time_relative B-depart_time.time I-depart_time.time\n",
+      "Intent: atis_flight\n",
+      "\n",
+      "Tegs: O O O O O O O O O O B-fromloc.city_name O B-toloc.city_name I-toloc.city_name I-toloc.city_name O B-depart_date.day_name O B-depart_time.time_relative B-depart_time.time I-depart_time.time\n",
+      "Intent: atis_flight\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def text_processing(model_list, test_text):\n",
+    "    result = []\n",
+    "    for model_loc in model_list:\n",
+    "        tokens = torch.IntTensor([[tokens_field.vocab.stoi[x] for x in test_text.lower().split()]]).to(DEVICE)\n",
+    "        pred = model_loc.forward(tokens)\n",
+    "        \n",
+    "        predicted_intent = pred[1].argmax()\n",
+    "        intent_pred = intent_field.vocab.itos[predicted_intent]\n",
+    "\n",
+    "        pred = pred[0].transpose(0, 1)\n",
+    "        pred = pred.reshape((-1,pred.shape[2]))\n",
+    "        max_preds = pred.argmax(dim = 1)\n",
+    "        tegs_pred = list(map(lambda y: tags_field.vocab.itos[y], max_preds.reshape((-1))))\n",
+    "        \n",
+    "        result.append((tegs_pred, intent_pred))\n",
+    "    return result\n",
+    "\n",
+    "model_1 = torch.load('AsynMultiTaskModel.pt')\n",
+    "model_2 = torch.load('MultiTaskModel.pt')\n",
+    "\n",
+    "# test_string = 'what\tare\tall\tthe\tavailable\tmeals'\n",
+    "# test_string = \"what\ttimes\tdoes\tcontinental\tdepart\tfrom\tboston\tto\tsan\tfrancisco\"\n",
+    "# test_string = \"what\ttype\tof\taircraft\tis\tused\tfor\tthe\tamerican\tflight\tleaving\tat\t419\tpm\"\n",
+    "test_string = \"i\tneed\tflight\tand\tairline\tinformation\tfor\ta\tflight\tfrom\tdenver\tto\tsalt\tlake\tcity\ton\tmonday\tdeparting\tafter\t5\tpm\"\n",
+    "# test_string = \"How much are tickets to yerevan\"\n",
+    "\n",
+    "result = text_processing((model_1,model_2), test_string)\n",
+    "for tegs, intent in result:\n",
+    "    print('Tegs: ', ' '.join(tegs),'\\n','Intent: ', intent, '\\n', sep='')\n",
+    "    "
    ]
   }
  ],
