--- a/AsynMultiTaskModel.ipynb
+++ b/AsynMultiTaskModel.ipynb
@@ -13,16 +13,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Study\\Dialogue_systems\\env\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "device(type='cuda', index=0)"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +157,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SharedModel(nn.Module):\n",
+    "    def __init__(self, vocab_size, intents_count, tags_count, emb_dim=64, lstm_hidden_dim=128, num_layers=1,  dropout_p=0.25, pad_idx = 0):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.embeddings_layer = nn.Embedding(vocab_size, emb_dim, padding_idx = pad_idx)\n",
+    "        self.dropout = nn.Dropout(dropout_p)\n",
+    "        self.lstm_layer = nn.LSTM(input_size=emb_dim, hidden_size=lstm_hidden_dim, bidirectional=True, num_layers=num_layers, batch_first=True, dropout = dropout_p if num_layers > 1 else 0)\n",
+    "        self.out_layer_intents = nn.Linear(lstm_hidden_dim * 2, intents_count)\n",
+    "        self.out_layer_tags = nn.Linear(lstm_hidden_dim * 2, tags_count)       \n",
+    "\n",
+    "    def forward(self, inputs):\n",
+    "        projections = self.dropout(self.embeddings_layer(inputs))\n",
+    "        output_lstm, (final_hidden_state, _) = self.lstm_layer(projections)\n",
+    "        \n",
+    "        hidden = self.dropout(torch.cat([final_hidden_state[0], final_hidden_state[1]], dim=1))\n",
+    "        output_intents = self.out_layer_intents(hidden)\n",
+    "        \n",
+    "        output_tags = self.dropout(output_lstm)\n",
+    "        output_tags = self.out_layer_tags(output_tags)\n",
+    "        return (output_tags, output_intents)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -461,9 +498,10 @@
     "        predicted_intent = pred[1].argmax()\n",
     "        intent_pred = intent_field.vocab.itos[predicted_intent]\n",
     "\n",
-    "        pred = pred[0].transpose(0, 1)\n",
-    "        pred = pred.reshape((-1,pred.shape[2]))\n",
-    "        max_preds = pred.argmax(dim = 1)\n",
+    "        # tegs_pred = pred[0]\n",
+    "        # print(tegs_pred)\n",
+    "        tegs_pred = pred[0].reshape((-1,pred[0].shape[2]))\n",
+    "        max_preds = tegs_pred.argmax(dim = 1)\n",
     "        tegs_pred = list(map(lambda y: tags_field.vocab.itos[y], max_preds.reshape((-1))))\n",
     "        \n",
     "        result.append((tegs_pred, intent_pred))\n",
@@ -481,6 +519,7 @@
     "result = text_processing((model_1,model_2), test_string)\n",
     "for tegs, intent in result:\n",
     "    print('Tegs: ', ' '.join(tegs),'\\n','Intent: ', intent, '\\n', sep='')\n",
+    "\n",
     "    "
    ]
   }
